# Plum-Rockets-Fh26

./: .gitignore  README.md
plum-engine/: Cargo.toml  HOWTORUN.md  farm_scan.csv  package.json
plum-engine/backend/: Cargo.toml
plum-engine/backend/src/: main.rs  models.rs  routes.rs  spatial_hash.rs  state.rs  world.rs
plum-engine/frontend/: package-lock.json  package.json  store.js  tsconfig.json
plum-engine/frontend/src/: App.css  App.jsx  App.tsx  VoxelEngine.tsx  index.css  store.ts  types.ts
plum-engine/frontend/src/components/: AuditReport.tsx
plum-engine/frontend/src/utils/: geminiAudit.ts
plum-engine/src-tauri/: Cargo.toml  tauri.conf.json
plum-engine/src-tauri/src/: main.rs
